--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-fab-gallery",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "version": "1.0.0",
+  "author": "DaCoDeMaNiaK",
+  "homepage": "https://github.com/dacodemaniak/my-fab-gallery",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -70,5 +70,5 @@
     "ts-node": "^8.3.0",
     "typescript": "~5.0.2"
   },
-  "description": "An Ionic project"
+  "description": "Simple photo gallery with some basic features"
 }
