--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/ios": "5.0.4",
     "@capacitor/keyboard": "5.0.2",
     "@capacitor/preferences": "^5.0.2",
+    "@capacitor/splash-screen": "^5.0.2",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
     "@ionic/pwa-elements": "^3.1.1",
